# global-health-research-map

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py  components.py  constants.py  db.py
dashboard/pages/: data_completeness.py  institutions.py  lens_a_funder.py  lens_b_geographic.py  lens_c_topics.py  lens_d_methods.py  overview.py
data/: funders_canonical.csv  journal_list.csv
data/taxonomy/: methods_taxonomy.csv  topic_burden_map.csv  topic_taxonomy.csv
docs/: gbd_burden_methodology.md
notebooks/: lens_A_funder_power.ipynb  lens_B_geographic_power.ipynb  lens_C_topic_trends.ipynb  lens_D_methods_gaps.ipynb  supplementary_institutions.ipynb
pipeline/: 00_setup_db.py  01_corpus_pull.py  02_topic_classify.py  03_methods_classify.py  04_funder_normalize.py  05_gender_infer.py  06_study_country.py  07_gbd_burden.py  reset_uncategorized.py  tag_unclassifiable.py  utils.py
validation/: 01_sample.py  02_kappa.py
