[project]
name = "global-health-research-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.6",
    "anthropic>=0.26.0",
    "duckdb>=1.3.2",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "python-dotenv>=0.21.1",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "tenacity>=8.2.3",
]
